Visual effect on mobile menu fixed.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@
 }
 
 #mobile-nav li:hover {
-    background-color: #eee
+    background-color: #616161
 }
 
 .sidenav .active #info-collapsible-list {
